- fixed bug that external relaxator is not reset appropriately for a new problem instance
- fixed potential bugs due to errors in resolving the LP after diving or probing
- removed wrong assert in function paramWrite()
- fixed potential bugs in SCIPpriceLoop() and priceAndCutLoop(), st. now all LP solution stati are handled appropriately
- fixed bug with uninitialized in check.awk

SCIP version 0.90
=================

compiling:
- added ncurses to the readline entries in the make/make.* files
- added quotes to sed expressions in Makefile (needed under Windows)
- modified makefiles for Windows/Intel
- added automatic query script in the Makefile for soft-link names

interface:
- new parameter "solinfeasible" for constraint handler callback methods ENFOLP and ENFOPS
- new method SCIPgetVerbLevel()
- slightly changed the meaning of the result codes returned by external relaxators: if they modify the LP or tighten
  bounds of variables, they are not automatically be called again (it is assumed that they already made use of these
  changes). They are only called again, if they returned SCIP_SUSPENDED or if some other plugin modified the LP.
- new parameter "escapecommand" for SCIPdialoghdlrAddHistory()
- new method SCIPescapeString()
- renamed all occurences of "removeable" by the correct English word "removable":
  SCIPconsIsRemovable(), SCIPsetConsRemovable(), SCIPvarIsRemovable(), SCIPcolIsRemovable(), SCIProwIsRemovable()
- new parameter "sticktonode" in SCIPcreateCons(), SCIPcreateConsAnd(), SCIPcreateConsBounddisjunction(),
  SCIPcreateConsKnapsack(), SCIPcreateConsLinear(), SCIPcreateConsLogicor(), SCIPcreateConsOr(), SCIPcreateConsVarbound(),
  SCIPcreateConsXor(), SCIPcreateConsSetpart(), SCIPcreateConsSetpack(), SCIPcreateConsSetcover():
  usually, you should set this to FALSE; if you want to add constraints
  as node markers with node data and, e.g., use the "activate" and "deactivate" callbacks to get informed about the